--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" th:href="@{/css/sidebar.css}">
 
     <script th:src="@{/management/localization/buttonsAJAX.js}"></script>
-<!--    <script th:src="@{/management/habits/jquery.liTextLength.js}"></script>-->
+
     <script>
         $(function () {
             $('.pr').liTextLength({
@@ -54,8 +54,6 @@
             border-radius: 10px;
             overflow: visible;
             cursor: pointer;
-
-
         }
 
     </style>
@@ -226,8 +224,8 @@
                                         <label th:for="checkbox+${iterStatus.count}" for="checkbox1"></label>
                                 </span>
                                     </td>
-                                    <td ><a class="id-link" th:text="${habit.id}"
-                                                                 th:href="@{/management/habits/{id} (id=${habit.id})}"/></td>
+                                    <td><a class="id-link" th:text="${habit.id}"
+                                           th:href="@{/management/habits/{id} (id=${habit.id})}"/></td>
 
                                     <td style="min-width: 98px">
                                         <div class="habit_img">
@@ -297,7 +295,7 @@
             <div id="addHabitModal" class="modal fade">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <form th:action="@{management/habits/save}" method="post" id="addHabitForm">
+                        <form id="addHabitForm" method="post" th:action="@{habits/save}" enctype="multipart/form-data">
                             <div class="modal-header">
                                 <h4 class="modal-title">[[#{greenCity.habit.page.add.habit}]]</h4>
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;
@@ -306,61 +304,66 @@
                             <div class="modal-body">
                                 <input type="hidden" class="form-control" name="id" value="0" readonly required>
                                 <div class="form-group">
-                                    <label>[[#{greenCity.pages.table.image.path}]]</label>
-                                    <input type="text" class="form-control" name="image" required>
-                                    <span th:id="errorModalAddHabitImage" class="errorSpan"></span>
-                                </div>
-                                <div class="form-group">
                                     <label for="fileCreate">[[#{greenCity.pages.table.image.upload}]]</label>
                                     <input type="file" class="form-control" id="fileCreate" name="file">
                                     <span th:id="errorModalAddfile" class="errorSpan"></span>
                                 </div>
                                 <div class="form-group">
                                     <label>[[#{greenCity.pages.table.complexity}]]</label>
-                                    <input type="text" class="form-control" name="complexity" required>
+                                    <input type="text" class="form-control" name="complexity" id="addComplexity"
+                                           required>
                                     <span th:id="'errorModalSavecomplexity'" class="errorSpan"></span>
                                 </div>
                                 <div class="form-group">
                                     <label>[[#{greenCity.pages.table.default.duration}]]</label>
-                                    <input type="text" class="form-control" name="defaultDuration" required>
+                                    <input type="text" class="form-control" name="defaultDuration"
+                                           id="addDefaultDuration" required>
                                     <span th:id="'errorModalSavedefaultDuration'" class="errorSpan"></span>
                                 </div>
+                                <!-- Language fields -->
                                 <th:block th:each="language, iterInfo : ${languages}">
-                                    <div class="row">
-                                        <div class="col">
-                                            <div class="form-group">
-                                                <label>[[#{greenCity.pages.table.lang}]]</label>
-                                                <input type="text" class="form-control" th:name="${language.getCode()}"
-                                                       th:value="${language.getCode()}" readonly required>
+                                    <div class="habit-translation-row" th:data-index="${iterInfo.index}">
+                                        <div class="row" th:data-index="${iterInfo.index}">
+                                            <div class="col">
+                                                <div class="form-group">
+                                                    <label>[[#{greenCity.pages.table.language.code}]]</label>
+                                                    <input type="text" class="form-control"
+                                                           th:name="'addHabitLanguageCode'+${iterInfo.index}"
+                                                           th:id="'addHabitLanguageCode'+${iterInfo.index}"
+                                                           th:value="${language.getCode()}" readonly required>
+                                                </div>
+                                            </div>
+                                            <div class="col-9">
+                                                <div class="form-group">
+                                                    <label>[[#{greenCity.pages.table.name}]]</label>
+                                                    <input type="text" class="form-control"
+                                                           th:name="'addHabitName'+${iterInfo.index}"
+                                                           th:id="'addHabitName'+${iterInfo.index}">
+                                                    <span th:id="'errorModalSavehabitTranslations['+${iterInfo.index}+'].name'"
+                                                          class="errorSpan"></span>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="col-9">
-                                            <div class="form-group">
-                                                <label>[[#{greenCity.pages.table.name}]]</label>
-                                                <input type="text" class="form-control eEdit"
-                                                       th:name="contentName+${language.getCode()}">
-                                                <span th:id="'errorModalSavehabitTranslations['+${iterInfo.index}+'].name'"
-                                                      class="errorSpan"></span>
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <div class="form-group">
+                                                    <label>[[#{greenCity.pages.table.habit.item}]]</label>
+                                                    <input type="text" class="form-control"
+                                                           th:name="'addHabitItem'+${iterInfo.index}"
+                                                           th:id="'addHabitItem'+${iterInfo.index}">
+                                                    <span th:id="'errorModalSavehabitTranslations['+${iterInfo.index}+'].habitItem'"
+                                                          class="errorSpan"></span>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-6">
-                                            <div class="form-group">
-                                                <label>[[#{greenCity.pages.table.habit.item}]]</label>
-                                                <input type="text" class="form-control eEdit"
-                                                       th:name="contentHabItem+${language.getCode()}">
-                                                <span th:id="'errorModalSavehabitTranslations['+${iterInfo.index}+'].habitItem'"
-                                                      class="errorSpan"></span>
-                                            </div>
-                                        </div>
-                                        <div class="col-6">
-                                            <div class="form-group">
-                                                <label>[[#{greenCity.pages.table.description}]]</label>
-                                                <input type="text" class="form-control eEdit"
-                                                       th:name="contentDescr+${language.getCode()}">
-                                                <span th:id="'errorModalSavehabitTranslations['+${iterInfo.index}+'].description'"
-                                                      class="errorSpan"></span>
+                                            <div class="col-6">
+                                                <div class="form-group">
+                                                    <label>[[#{greenCity.pages.table.description}]]</label>
+                                                    <input type="text" class="form-control"
+                                                           th:name="'addHabitDescription'+${iterInfo.index}"
+                                                           th:id="'addHabitDescription'+${iterInfo.index}">
+                                                    <span th:id="'errorModalSavehabitTranslations['+${iterInfo.index}+'].description'"
+                                                          class="errorSpan"></span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -589,6 +592,64 @@
         thumbRight.classList.remove("active");
     });
 
+</script>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    $(document).ready(function () {
+        $('#addHabitForm').on('submit', function (event) {
+            event.preventDefault();
+            var formData = new FormData();
+            var habitManagementDto = {
+                complexity: $("#addComplexity").val(),
+                defaultDuration: $("#addDefaultDuration").val(),
+                habitTranslations: []
+            };
+            var habitTranslations = [];
+
+            $('.habit-translation-row').each(function () {
+                var $container = $(this);
+                var index = $container.data('index');
+                var name = $container.find('input[id="addHabitName' + index + '"]').val();
+                var habitItem = $container.find('input[id="addHabitItem' + index + '"]').val();
+                var description = $container.find('input[id="addHabitDescription' + index + '"]').val();
+                var languageCode = $container.find('input[id="addHabitLanguageCode' + index + '"]').val();
+
+                habitTranslations.push({
+                    languageCode: languageCode,
+                    name: name,
+                    habitItem: habitItem,
+                    description: description
+                });
+
+            });
+
+            habitTranslations.forEach(t => console.log(t));
+            habitManagementDto.habitTranslations = habitTranslations;
+            formData.append('habitManagementDto', new Blob([JSON.stringify(habitManagementDto)], {type: 'application/json'}));
+
+            let fileInput = $("#fileCreate")[0];
+            if (fileInput.files.length > 0) {
+                formData.append('file', fileInput.files[0]);
+            }
+
+            $.ajax({
+                type: 'POST',
+                url: "http://localhost:8080/management/habits/save",
+                data: formData,
+                contentType: false,
+                processData: false,
+                success: function (response) {
+                    alert('Habit added successfully!');
+                    window.location.href = 'habits';
+                },
+                error: function (xhr, status, error) {
+                    console.log("Error: " + error);
+                    alert('Error: Unable to save the habit. Please try again.');
+                }
+            });
+        });
+    });
+    /*]]>*/
 </script>
 </body>
 
