--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -634,7 +634,7 @@
 
             $.ajax({
                 type: 'POST',
-                url: "http://localhost:8080/management/habits/save",
+                url: "/management/habits/save",
                 data: formData,
                 contentType: false,
                 processData: false,
