--- a/core/src/main/resources/templates/core/management_achievement.html
+++ b/core/src/main/resources/templates/core/management_achievement.html
@@ -42,7 +42,7 @@
                                         <img alt="search" id="btnSearchImage"
                                              src="/img/search.png">
                                         <input type="text" name="query" id="inputSearch" class="form-control"
-                                               placeholder="Search…">
+                                               th:value="${query}" th:placeholder="#{greenCity.pages.search}">
                                     </form>
                                 </span>
                             <a class="btn btn-secondary" data-toggle="modal" href="#addAchievementModal"
@@ -122,7 +122,7 @@
                         <li class="page-item"
                             th:classappend="${!pageable.isFirst()} ? '' : 'disabled'">
                             <a class="page-link" rel="tooltip" th:if="${!pageable.isFirst()}"
-                               th:href="@{/management/achievement?page={id}(id=${0})}"><i
+                               th:href="@{/management/achievement?page={id}(id=${0}, query=${query})}"><i
                                     class="arrow fas fa-chevron-left"></i></a>
                             <a class="page-link" rel="tooltip" th:if="${pageable.isFirst()}"><i
                                     class="arrow fas fa-chevron-left"></i></a>
@@ -132,13 +132,13 @@
                             th:if="${pageNumber > -1 && pageNumber < pageable.getTotalPages()}"
                             th:classappend="${pageNumber == pageable.getNumber()} ? 'active' : ''"
                             th:each="pageNumber : ${#numbers.sequence(pageable.getNumber()-3, pageable.getNumber()+3)}">
-                            <a class="page-link" th:href="@{/management/achievement?page={id}(id=${pageNumber})}">[[${pageNumber}+1]]</a>
+                            <a class="page-link" th:href="@{/management/achievement?page={id}(id=${pageNumber}, query=${query})}">[[${pageNumber}+1]]</a>
                         </li>
 
                         <li class="page-item"
                             th:classappend="${!pageable.isLast()} ? '' : 'disabled'">
                             <a class="page-link" rel="tooltip" th:if="${!pageable.isLast()}"
-                               th:href="@{/management/achievement?page={id}(id=${pageable.getTotalPages()-1})}"><i
+                               th:href="@{/management/achievement?page={id}(id=${pageable.getTotalPages()-1}, query=${query})}"><i
                                     class="arrow fas fa-chevron-right"></i></a>
                             <a class="page-link" rel="tooltip" th:if="${pageable.isLast()}"><i
                                     class="arrow fas fa-chevron-right"></i></a>
